--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
 
     $(document).ready(function () {
       var $body = $('body');
-      var $temp = $('<input></input>');
-      const tweets = [];
-      $temp.attr("placeholder", "What's happening?");
-      $temp.appendTo($body);
-      // $body.html('<h1>Twiddler</h1>');
+      const $topPart = $('<div></div>').addClass('top');
+      var $user = $('<input></input>');
+      var $message = $('<input></input>');
+      const $tweets = [];
+      $user.appendTo($topPart);
+      $message.appendTo($topPart);
+      $topPart.appendTo($body);
+      $message.attr("placeholder", "What's happening?").addClass('inputBox');
       $body.css("background-color", "purple");
       var index = streams.home.length - 1;
       function userClicked(e) {
         console.log(e.target);
       }
+      var $wrapper = $('<div></div>').addClass('wrapper');
+      $wrapper.appendTo($body);
       while (index >= 0) {
         var tweet = streams.home[index];
         console.log(tweet);
         var $tweet = $('<div></div>');
+        $tweet.appendTo($wrapper);
         $tweet.text('@' + tweet.user + ': ' + tweet.message + ' created at: ' + tweet.created_at);
-        $tweet.addClass('tweet').appendTo($body).on('click', userClicked);
+        $tweet.addClass('tweet').on('click', userClicked);
         index -= 1;
       }
     });
